# kazmath_3ds

./: CMakeLists.txt
Include/kazmath/: 3ds.h  aabb2.h  aabb3.h  kazmath.h  mat3.h  mat4.h  plane.h  quaternion.h  ray2.h  ray3.h  utility.h  vec2.h  vec3.h  vec4.h
Include/kazmath/GL/: mat4stack.h  matrix.h
Source/: 3ds.c  mat4.c  quaternion.c  ray2.c  ray3.c  vec4.c
Source/GL/: mat4stack.c  matrix.c
